<resources>
    <string name="app_name">Avito weather</string>

    //Navigation
    <string name="weather">Weather</string>
    <string name="add_location">Add location</string>
    <string name="current_city">Current city</string>
    <string name="choose_city">Choose city</string>
    <string name="add_city">Add city</string>

    // Details
    <string name="details">DETAILS</string>
    <string name="sunrise">Sunrise</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="uv">UV</string>

    // Hourly and Daily
    <string name="current_temperature">7</string>
    <string name="update_in_23_00">Update in: </string>
    <string name="description_current_weather">Clear</string>
    <string name="feel_like">Feel like</string>
    <string name="current">Current</string>
    <string name="add">Add</string>
    <string name="choose">Choose</string>
    <string name="moscow">Moscow</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="_22_00">22:00</string>
    <string name="hourly_image">Hourly image</string>
    <string name="daily_forecast">DAILY FORECAST</string>
    <string name="cloudy">Cloudy</string>
    <string name="today">Today</string>
    <string name="background_image">background image</string>
    <string name="celsius">°</string>
    <string name="input_city">Input city</string>
    <string name="save">save</string>
    <string name="entry_description">Enter a city or click on the auto-detect button</string>
    <string name="get_current_location">get_current_location</string>
    <string name="invalid_name">Invalid name</string>
    <string name="image_not_found">https://assets9.lottiefiles.com/packages/lf20_zxliqmhr.json</string>
    <string name="text_not_found">It seems you forgot to add or select a city</string>
    <string name="city_not_found">This city was not found</string>
    <string name="dialog_city_warning">To display the weather in your city, you need to confirm the permission</string>
    <string name="hello">Hello</string>
    <string name="ok">OK</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_refused">permission refused</string>
    <string name="no_internet">No internet connection</string>
    <string name="check_internet">Check your internet connection</string>


</resources>