<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/update_in_23_00"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/current_temperature"
        android:textColor="@color/black"
        android:textSize="@dimen/temperature_view_size"
        app:layout_constraintLeft_toLeftOf="@id/update_date"
        app:layout_constraintTop_toBottomOf="@id/update_date" />

    <TextView
        android:id="@+id/description_current_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/description_current_weather"
        android:textColor="@color/black"
        android:textSize="@dimen/description_current_weather_size"
        app:layout_constraintLeft_toLeftOf="@id/update_date"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <TextView
        android:id="@+id/feel_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/feel_like"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feel_like_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temperature"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/feel_like"
        app:layout_constraintTop_toBottomOf="@+id/feel_like"

        />


</androidx.constraintlayout.widget.ConstraintLayout>