<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white_transparency_harder"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current" />

            <TextView
                android:id="@+id/sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/sunrise"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunrise" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="10dp"
                android:text="@string/sunset"
                app:layout_constraintStart_toEndOf="@+id/sunrise"
                app:layout_constraintTop_toBottomOf="@+id/current" />

            <TextView
                android:id="@+id/sunset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sunset"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/sunset"
                app:layout_constraintTop_toBottomOf="@+id/sunset" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/wind_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunrise_value" />

            <TextView
                android:id="@+id/wind_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/wind_speed"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="10dp"
                android:text="@string/humidity"
                app:layout_constraintStart_toEndOf="@+id/sunrise"
                app:layout_constraintTop_toBottomOf="@+id/sunset_value" />

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/humidity"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/humidity"
                app:layout_constraintTop_toBottomOf="@+id/humidity" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pressure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wind_speed_value" />

            <TextView
                android:id="@+id/pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/wind_speed"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressure" />

            <TextView
                android:id="@+id/uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="10dp"
                android:text="@string/uv"
                app:layout_constraintStart_toEndOf="@+id/sunrise"
                app:layout_constraintTop_toBottomOf="@+id/humidity_value" />

            <TextView
                android:id="@+id/uv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/uv"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/uv"
                app:layout_constraintTop_toBottomOf="@+id/uv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>