<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".presentation.addcity.AddCityFragment">

    <include
        android:id="@+id/mainFragmentToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_loading_city"
        app:layout_constraintTop_toBottomOf="@+id/mainFragmentToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/white_transparency_harder"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainFragmentToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">


            <TextView
                android:id="@+id/entry_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/entry_description"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/name_text_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="80dp"
                android:hint="@string/input_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/entry_desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/geolocation_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/get_current_location"
                android:focusable="true"
                android:src="@drawable/ic_baseline_add_location_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name_text_field"
                app:layout_constraintTop_toBottomOf="@+id/name_text_field"
                app:layout_constraintTop_toTopOf="@+id/name_text_field" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white_transparency_harder"
        android:text="@string/save"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>